# sturmbaum

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  run.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
stormbaumr/: __init__.py
sturmbaum/: app.py  db.py  model.py  sturmbaum.py
sturmbaum/static/: package-lock.json  package.json  webpack.config.js
sturmbaum/static/css/: style.css
sturmbaum/static/scripts/: Weather.js  index.js
sturmbaum/templates/pages/: about.html.jinja  base.html.jinja  home.html.jinja
sturmbaum/templates/partials/: footer.html.jinja  header.html.jinja  nav.html.jinja
