[tool.poetry]
name = "sturmbaum"
version = "0.1.0"
description = "A weather-information serving application ."
authors = ["Jared Sulzdorf <j.sulzdorf@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
